--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -724,6 +724,10 @@ video {
   margin-top: 0.125rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -879,6 +883,10 @@ video {
 
 .gap-\[0\.125rem\] {
   gap: 0.125rem;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-x-1 {
@@ -1097,6 +1105,10 @@ video {
 
 .leading-none {
   line-height: 1;
+}
+
+.leading-4 {
+  line-height: 1rem;
 }
 
 .text-gray-500 {
